fix header overflow

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html {
 
 header {
   margin: 0;
-  height: 50vh;
+  min-height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
